<resources>
    <string name="app_name">Contactos</string>
    <string name="nombre_completo_hint">Nombre completo</string>
    <string name="fecha_nacimiento_hint">Fecha nacimiento</string>
    <string name="telefono_hint">Telefono</string>
    <string name="email_hint">Correo electronico</string>
    <string name="descripcion_contacto_hint">Descripcion del contacto</string>
    <string name="siguiente_text">Siguiente</string>
    //Strings de validaciones: Error
    <string name="error_validation_nombre_completo">Error: Caracteres no valido</string>
    <string name="error_validation_fecha_nacimiento">Error: Fecha no valida</string>
    <string name="error_validation_telefono">Error: Telefono no valido</string>
    <string name="error_validation_email">Error: Correo no valido</string>
    <string name="error_validation_empty_field">Complete este campo</string>
    //DETALLE CONTACTO ACTIVITY
    <string name="contact_details_title">Detalle de contacto</string>
    <string name="contact_details_name">Nombre completo:</string>
    <string name="contact_details_birthdate">Fecha nacimiento:</string>
    <string name="contact_details_phone_number">Telefono:</string>
    <string name="contact_details_email">Correo electronico:</string>
    <string name="contact_details_description">Descripcion:</string>
    <string name="contact_details_modification_button">Modificar</string>

</resources>